@@ -58,6 +58,11 @@ ISSUES:
   excluding main effects (so ti(x,z) is like x:z while te(x,z) is more
   like x*z, although the analogy is not exact). 
 
+* summary.gam now uses a more efficient approach to p-value computation 
+  for smooths, using the factor R from the QR factorization of the weighted 
+  model matrix. This is a weighted version of the Wood (2013) statistic used
+  previously - simulations in that paper essentially unchanged by the change. 
+
 * gamm could fail with fixed smooths while assembling total 
   penalty matrix, by attempting to access non-existent penalty 
   matrix. (Thanks Ainars Aunins for reporting this.)
